# llm-bridge

./: .bazelrc  .dockerignore  .gitignore  .golangci.yml  AGENTS.md  BUILD.bazel  CLAUDE.md  Dockerfile  Dockerfile.base  MODULE.bazel  Makefile  README.md  TODO.md  docker-compose.yml  go.mod  go.sum  llm-bridge.yaml.example
.agents/: kenken-state.json
.claude/: kenken-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmd/llm-bridge/: BUILD.bazel  main.go
docs/: discord-setup.md  security.md
docs/plans/: 2026-01-27-llm-bridge-design.md  2026-01-27-llm-bridge-plan.md
internal/bridge/: BUILD.bazel  bridge.go  bridge_test.go  merger.go  merger_test.go  mock_llm_test.go  stream_event.go
internal/config/: BUILD.bazel  addrepo.go  addrepo_test.go  config.go  config_test.go
internal/git/: BUILD.bazel  git.go  git_test.go
internal/llm/: BUILD.bazel  claude.go  claude_stub_test.go  claude_test.go  codex.go  codex_test.go  factory.go  factory_test.go  llm.go  mock.go  tmux_claude.go  tmux_claude_test.go  tmux_executor.go  tmux_executor_mock_test.go  tmux_executor_test.go  tmux_utils.go  tmux_utils_test.go
internal/output/: BUILD.bazel  output.go  output_test.go
internal/provider/: BUILD.bazel  discord.go  discord_integration_test.go  discord_test.go  mock.go  mock_test.go  provider.go  telegram.go  terminal.go  terminal_test.go
internal/ratelimit/: BUILD.bazel  limiter.go  limiter_test.go
internal/router/: BUILD.bazel  router.go  router_test.go
scripts/: check-coverage.sh  claude-stub.sh  lint.sh
