module(
    name = "llm-bridge",
    version = "0.0.0",
)

# ─── Go rules ────────────────────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bwmarrin_discordgo",
    "com_github_creack_pty",
    "com_github_spf13_cobra",
    "in_gopkg_yaml_v3",
    "org_golang_x_time",
)

# ─── Packaging ───────────────────────────────────────────────────────────────
bazel_dep(name = "rules_pkg", version = "1.2.0")

# ─── OCI container images ────────────────────────────────────────────────────
bazel_dep(name = "rules_oci", version = "2.2.7")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "alpine",
    digest = "sha256:6baf43584bcb78f2e5847d1de515f23499913ac9f12bdf834811a3145eb11ca1",
    image = "index.docker.io/library/alpine",
    platforms = ["linux/amd64"],
)
use_repo(oci, "alpine", "alpine_linux_amd64")
