load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "llm-bridge_lib",
    srcs = ["main.go"],
    importpath = "github.com/anthropics/llm-bridge/cmd/llm-bridge",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/bridge",
        "//internal/config",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "llm-bridge",
    embed = [":llm-bridge_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
