load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "git",
    srcs = ["git.go"],
    importpath = "github.com/anthropics/llm-bridge/internal/git",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "git_test",
    srcs = ["git_test.go"],
    embed = [":git"],
)
