load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "llm",
    srcs = [
        "claude.go",
        "factory.go",
        "llm.go",
        "tmux_claude.go",
        "tmux_executor.go",
        "tmux_utils.go",
    ],
    importpath = "github.com/anthropics/llm-bridge/internal/llm",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_creack_pty//:pty"],
)

go_test(
    name = "llm_test",
    srcs = [
        "claude_test.go",
        "factory_test.go",
        "tmux_claude_test.go",
        "tmux_executor_mock_test.go",
        "tmux_utils_test.go",
    ],
    embed = [":llm"],
)
