load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "provider",
    srcs = [
        "discord.go",
        "mock.go",
        "provider.go",
        "terminal.go",
    ],
    importpath = "github.com/anthropics/llm-bridge/internal/provider",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_bwmarrin_discordgo//:discordgo"],
)

go_test(
    name = "provider_test",
    srcs = [
        "discord_test.go",
        "mock_test.go",
        "terminal_test.go",
    ],
    embed = [":provider"],
)

go_test(
    name = "discord_integration_test",
    srcs = ["discord_integration_test.go"],
    embed = [":provider"],
    gotags = ["integration"],
    size = "large",
    tags = [
        "integration",
        "manual",
        "no-sandbox",
    ],
    deps = [
        "//internal/config:config",
        "@com_github_bwmarrin_discordgo//:discordgo",
    ],
)
